resolved fdo#40021 CSV import got confused by erroneous HTML detection

HTMLParser::IsHTMLFormat() is convinced that anything containing a valid HTML
tag would indeed be HTML, which is a rather idiotic assumption for us in the
case of "foo <br> bar" with a preselected CSV filter. So keep this detection to
the end.

The original order where preselected CSV had precedence over others was changed
with 9f1cc58c20ee365ff2a158ad69c1091e6ad11ac6

(cherry picked from commit a5eadc6aaafec92df23c57e258882a2c98ece0ad)

Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>

Conflicts:

	sc/source/ui/unoobj/scdetect.cxx